crates/libs/frieze-macros/tests/ui/generic_struct_lifetime_unsupported.stderr
error: frieze: lifetime parameters are not supported in #[derive(Schema)] (struct `Borrowed`). frieze schemas describe owned data layouts; remove the lifetime parameter or wrap the borrowed data in an owned type.
 --> tests/ui/generic_struct_lifetime_unsupported.rs:9:17
  |
9 | struct Borrowed<'a> {
  |                 ^^
